SERVER-48631 Do not allow renameCollection to create collection which begins with '.'